--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -9,7 +9,7 @@ contact_links:
   - name: 👋 Slack
     url: https://waitlist.withfig.com/waitlist
     about: Get support from the Fig Community Slack
-  - name: 📩 Email hello@withfig.com
+  - name: 📩 Email
     url: mailto:hello@withfig.com
-    about: Get support from the team
+    about: Get support from the team at hello@withfig.com
     
