--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -9,6 +9,9 @@ contact_links:
   - name: 👋 Slack
     url: https://waitlist.withfig.com/waitlist
     about: Get instant support from the Fig Community Slack
+  - name: 💬 Forum
+    url: https://forum.withfig.com
+    about: Fig's support knowledge base 
   - name: 📩 Email
     url: https://tinyurl.com/y4m9zqlw
     about: Get support from the Fig team at hello@withfig.com
