--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,27 +1,21 @@
---- 
+---
 blank_issues_enabled: true
-contact_links: 
-  - 
-    about: "Use this repo to file issues related to Fig's docs"
+contact_links:
+  - about: "Use this repo to file issues related to Fig's docs"
     name: withfig/docs
     url: "https://github.com/withfig/docs/issues/new"
-  - 
-    about: "Use this repo to file issues related to autocomplete. These include issues for specific completion specs (e.g. git, aws, docker...), building specs, and Fig's bash parser."
+  - about: "Use this repo to file issues related to autocomplete. These include issues for specific completion specs (e.g. git, aws, docker...), building specs, and Fig's bash parser."
     name: withfig/autocomplete
     url: "https://github.com/withfig/autocomplete/issues/new/choose"
-  - 
-    about: "Use this repo to file issues related to Fig's shell integrations, SSH integration, shell onboarding flow, and installation/update scripts."
+  - about: "Use this repo to file issues related to Fig's shell integrations, SSH integration, shell onboarding flow, and installation/update scripts."
     name: withfig/config
     url: "https://github.com/withfig/config/issues/new/choose"
-  - 
-    about: "Fig's support knowledge base"
+  - about: "Fig's support knowledge base"
     name: "💬  Forum"
     url: "https://forum.withfig.com"
-  - 
-    about: "Get instant support from the Fig Community Slack"
+  - about: "Get instant support from the Fig Community Slack"
     name: "👋  Slack"
     url: "https://waitlist.withfig.com/waitlist"
-  - 
-    about: "Get support from the Fig team at hello@withfig.com"
+  - about: "Get support from the Fig team at hello@fig.io"
     name: "📩  Email"
     url: "https://tinyurl.com/y4m9zqlw"
