--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -5,67 +5,52 @@ labels: [NEED_TO_LABEL]
 body:
 - type: checkboxes
   attributes:
-    label: Is there an existing issue for this?
-    description: Please search [github.com/withfig/fig/issues](https://github.com/withfig/fig/issues) to see if an issue already exists for the bug you encountered.
+    label: Have you searched for a duplicate issue?
     options:
-    - label: I have searched the existing issues
+    - label: I have searched [github.com/withfig/fig/issues](https://github.com/withfig/fig/issues) and there are no duplicates
       required: true
 - type: textarea
   attributes:
-    label: Issue Summary
-    description: Summarise your issue
-    placeholder: e.g. the autocomplete popup sometimes doesn't appear after changing tabs
+    label: Issue Details
+    description: What happens? What do you expect? How do we reproduce?
+    value: |
+    ### Summary 
+    e.g. Autocomplete is occasionally nonresponsive
+    
+    ### Steps to Reproduce
+    1. ..
+    2. ..
+    
+    ### Expected Results
+    e.g. Autocomplete suggestion box should always pop up.
+    
+    
+    ### Actual Results
+    e.g. Occasionally, the suggestion box disappears and reappears after entering a few commands.
   validations:
-    required: false
+    required: true
 - type: textarea
   attributes:
-    label: Expected Behavior
-    description: What did you expect to happen?
-  validations:
-    required: false
-- type: textarea
-  attributes:
-    label: Steps To Reproduce
-    description: Steps to reproduce the behavior.
-    placeholder: |
-      1. In this environment...
-      2. With this config...
-      3. Run '...'
-      4. See error...
-  validations:
-    required: false
-- type: textarea
-  attributes:
-    label: Output of `fig diagnostic`
+    label: Environment
     description: Run `fig diagnostic` and paste the output below. If you can't, tell us any information you think is relevant (OS, m1 etc)
     render: bash
   validations:
-    required: false
+    required: true
 - type: dropdown
   attributes:
-    label: Specific Terminal?
+    label: More Detail
+    description: Is your issue specifically related to one of the following terminals, shells, or integrations? ? 
     options:
-      - native macOS terminal
-      - VSCode
-      - iTerm2
-      - Hyper
-    multiple: true
-- type: dropdown
-  attributes:
-    label: Specific Shell?
-    options:
-      - bash
-      - zsh
-      - fish
-      - other
-    multiple: true
-- type: dropdown
-  attributes:
-    label: Specific Integration?
-    options:
-      - ssh
-      - docker
-      - tmux
+      - terminal: native macOS terminal
+      - terminal: VSCode
+      - terminal: iTerm2
+      - terminak: Hyper
+      - shell: bash
+      - shell: zsh
+      - shell: fish
+      - integration: ssh
+      - integration: docker
+      - integration: tmux
     multiple: true
 - type: textarea
   attributes:
