--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -13,7 +13,8 @@ body:
   attributes:
     label: Issue Details
     description: What happens? What do you expect? How do we reproduce?
-    value: "### Summary\ne.g. Autocomplete is occasionally nonresponsive\n\n### Steps to Reproduce"
+    # Because we are using hashtags at the start of a line, we must put the value in quotes. We cannot use YAML's multiline syntax with the pipe symbol
+    value: "### Summary\ne.g. Autocomplete is occasionally nonresponsive\n\n\n### Steps to Reproduce\n1. ..\n2. ..\n\n\n### Expected Results\ne.g. Autocomplete suggestion box should always pop up.\n\n\n### Actual Results\ne.g. Occasionally, the suggestion box disappears and reappears after entering a few commands.\n\n"
   validations:
     required: true
 - type: textarea
@@ -26,18 +27,18 @@ body:
 - type: dropdown
   attributes:
     label: More Detail
-    description: Is your issue specifically related to one of the following terminals, shells, or integrations? ? 
+    description: Is your issue only reproducible in any of the following terminals, shells, or integrations? If reproducible in all, leave blank.
     options:
-      - terminal: native macOS terminal
-      - terminal: VSCode
-      - terminal: iTerm2
-      - terminak: Hyper
-      - shell: bash
-      - shell: zsh
-      - shell: fish
-      - integration: ssh
-      - integration: docker
-      - integration: tmux
+      - terminal::native macOS terminal
+      - terminal::VSCode
+      - terminal::iTerm2
+      - terminak::Hyper
+      - shell::bash
+      - shell::zsh
+      - shell::fish
+      - integration::ssh
+      - integration::docker
+      - integration::tmux
     multiple: true
 - type: textarea
   attributes:
