--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -1,6 +1,6 @@
-name: Create Issue
+name: My Issue does not relate to a specific CLI tool
 description: All issues except ones relating to specific CLI tools
-title: "ISSUE TITLE"
+title: " "
 labels: [NEED_TO_LABEL]
 body:
 - type: checkboxes
