--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -6,9 +6,9 @@ body:
   attributes:
     label: Sanity checks
     options:
-    - label: I have searched [github.com/withfig/fig/issues](https://github.com/withfig/fig/issues?q=) and there are no duplicates of my issue
+    - label: "I have searched [github.com/withfig/fig/issues](https://github.com/withfig/fig/issues?q=) and there are no duplicates of my issue <a href='http://example.com' target='_blank'>Hello, world!</a>"
       required: true
-    - label: "My issue does not relate to an error with a specific CLI tool (e.g. `git checkout` is missing options). If it does, please create your issue here: [withfig/autocomplete](https://github.com/withfig/autocomplete/issues?q=)"
+    - label: "My issue does not relate to a specific CLI tool (e.g. `git checkout` is missing options). If it does, please create your issue here: [withfig/autocomplete](https://github.com/withfig/autocomplete/issues?q=)"
       required: true
 - type: textarea
   attributes:
