--- a/.github/ISSUE_TEMPLATE/main_issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/main_issue_template.yml
@@ -41,6 +41,10 @@ body:
       - integration::docker
       - integration::tmux
     multiple: true
+- type: checkboxes
+  attributes:
+    options:
+    - label: "Is this issue related to the docs?"
 - type: textarea
   attributes:
     label: Anything else?
