--- a/.github/ISSUE_TEMPLATE/main_issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/main_issue_template.yml
@@ -45,6 +45,7 @@ body:
   attributes:
     options:
     - label: "Is this issue related to the docs?"
+    required: false
 - type: textarea
   attributes:
     label: Anything else?
