Prompt users to run `fig doctor` when opening a new issue

--- a/.github/ISSUE_TEMPLATE/1_main_issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/1_main_issue_template.yml
@@ -8,6 +8,8 @@ body:
     options:
     - label: "I have searched [github.com/withfig/fig/issues](https://github.com/withfig/fig/issues?q=) and there are no duplicates of my issue"
       required: true
+    - label: "I have run `fig doctor` in the affected terminal session"
+      required: true
 - type: textarea
   attributes:
     label: Issue Details
