Change text area to yaml

--- a/.github/ISSUE_TEMPLATE/1_main_issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/1_main_issue_template.yml
@@ -31,6 +31,6 @@ body:
   attributes:
     label: Environment
     description: "Run `fig diagnostic` and paste the output below. If you can't, tell us any information you think is relevant (OS, m1 etc)"
-    render: bash
+    render: yaml
   validations:
     required: true
