Update and rename 1_main_issue_template.yml to general.yml

--- a/.github/DISCUSSION_TEMPLATE/general.yml
+++ b/.github/DISCUSSION_TEMPLATE/general.yml
@@ -1,7 +1,6 @@
-name: "Issue Template"
 description: "File an issue related to Fig"
 title: "bug: "
-labels: ["NEED_TO_LABEL", "type:bug"]
+# labels: [""]
 
 body:
 - type: checkboxes
