--- a/.github/ISSUE_TEMPLATE/1_main_issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/1_main_issue_template.yml
@@ -1,7 +1,7 @@
 name: "Issue Template"
 description: "File an issue related to Fig"
 title: "bug: "
-labels: ["NEED_TO_LABEL", "type:bug"]
+labels: ["NEED_TO_LABEL"]
 
 body:
 - type: checkboxes
