created general question template

--- a/.github/ISSUE_TEMPLATE/2_main_issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/2_main_issue_template.yml
@@ -1,4 +1,4 @@
-name: "Issue Template"
+name: "Bug Template"
 description: "File an issue related to Fig"
 title: "bug: "
 labels: ["NEED_TO_LABEL"]
