--- a/.github/ISSUE_TEMPLATE/3_feature_request_template.yml
+++ b/.github/ISSUE_TEMPLATE/3_feature_request_template.yml
@@ -1,4 +1,4 @@
-name: New Feature Template
+name: Feature request
 description: All new feature requests except ones relating to specific CLI tools
 labels: [NEED_TO_LABEL]
 body:
